frontend/test/should_fail/simple_eval_001.grg
rule r
{
	modify {
		eval {
			def var x:int = 0;
			if(true) {
				x = 1;
			}
		}
	}
}